--- a/src/app/products-test/products.component.html
+++ b/src/app/products-test/products.component.html
@@ -1,1 +1,2 @@
+<span *ngIf="products.currentRow">{{products.currentRow.availableFrom1.displayValue}}</span>
 <data-grid [settings]="products"></data-grid>
